# Auto-USTB-GFJY

./: .gitignore  Build.py  Main.py  README.md  pyproject.toml
src/: Cipher.py  GlobalMethods.py
