[tool.poetry]
name = "AutoGfjyUstb"
version = "1.0.0"
description = "Auto complete USTB GFJY lessons"
authors = ["Harry Huang <harryhuang2652@qq.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.8.10"
Pillow = "~8.4"
pycryptodome = "~3.20"
requests = "~2.32"

[tool.poetry.dev-dependencies]
pyinstaller = "6.8.0"

[[tool.poetry.source]]
name = "PyPI-Tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.build]
build-dir = "$project$\\build"
entry = "$project$\\Main.py"
log-level = "WARN"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
